[package]
name = "pop3-rs"
version = "0.1.0"
authors = ["Darshit Shah <darnir@gmail.com>"]
build = "build.rs"
description = "A rust based library for handling the POP3 Protocol"
repository = "https://github.com/darnir/pop3-rs"
homepage = "https://github.com/darnir/pop3-rs"
keywords = ["pop", "pop3", "mail", "protocol"]
categories = ["network-programming", "web-programming"]
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "pop3-rs" }

[features]
default = ["serde_codegen"]
unstable = ["serde_derive"]

[build-dependencies]
serde_codegen = { version = "0.8", optional = true }

[dependencies]
serde = "0.8"
serde_derive = { version = "0.8", optional = true }
openssl = "0.9"
log = "0.3"
error-chain = "0.8"
regex = "0.2"
lazy_static = "0.1"
rust-crypto = "0.2"
