[package]
name = "pop3-rs"
version = "0.1.0"
authors = ["Darshit Shah <darnir@gmail.com>"]
description = "A rust based library for handling the POP3 Protocol"
repository = "https://github.com/darnir/pop3-rs"
homepage = "https://github.com/darnir/pop3-rs"
keywords = ["pop", "pop3", "mail", "protocol"]
documentation = "https://docs.rs/pop3-rs"
categories = ["network-programming", "web-programming"]
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "pop3-rs" }

[dependencies]
openssl = "0.10.15"
log = "0.4"
error-chain = "0.11"
regex = "0.2"
lazy_static = "1.0"
rust-crypto = "0.2"
